--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUMINA 2025</title>
+    <title>STRIDE | Bhopal-Indore Run Community</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,19 +12,15 @@
     <style>
       html {
         scroll-behavior: smooth;
-        scroll-padding-top: 100px; /* Offset for fixed header */
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
-      
-      /* Hide scrollbar for Chrome, Safari and Opera */
       ::-webkit-scrollbar {
         display: none;
       }
-
       body {
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #31326f; /* Deep Indigo base */
+        background-color: #09090b;
         color: #fff;
         overflow-x: hidden;
       }
@@ -34,12 +31,13 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24"
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
