--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,7 +36,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "jspdf": "https://esm.sh/jspdf@^2.5.1"
   }
 }
 </script>
