feat: Integrate QR code scanning and update dependencies
Adds `jsqr` for QR code scanning functionality and updates other dependencies, including React and Lucid icons. Updates the README to reflect new features like QR protocol and admin terminal.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,7 +38,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "jspdf": "https://esm.sh/jspdf@^2.5.1"
+    "jspdf": "https://esm.sh/jspdf@^2.5.1",
+    "jsqr": "https://esm.sh/jsqr@^1.4.0"
   }
 }
 </script>
